# eigenml

./: .gitignore  CMakeLists.txt  README.md
include/eigenml/: model.hpp
include/eigenml/core/: eigenml.hpp  exceptions.hpp  model.hpp  model_traits.hpp  types.hpp
include/eigenml/core/math/: distributions.hpp
include/eigenml/core/vectors/: sorting.hpp
include/eigenml/decision_tree/: criteria.hpp  decision_tree.hpp  decision_tree_node.hpp  decision_tree_params.hpp  decision_tree_traits.hpp  find_thresholds.hpp
include/eigenml/decision_tree/distributions/: base_distribution.hpp  continuous_distribution.hpp  discrete_distribution.hpp
include/eigenml/decision_tree/nodes/: base_tree_node.hpp  classification_tree_node.hpp  regression_tree_node.hpp
include/eigenml/decision_tree/splitting/: criteria.hpp  criterion_creator.hpp  find_thresholds.hpp
include/eigenml/logging/: init_logging.hpp  logger.hpp  logging.hpp  printing.hpp
include/eigenml/tree/: decision_tree.hpp  decision_tree_params.hpp  node.hpp
scripts/: build.sh
src/: CMakeLists.txt
src/core/: CMakeLists.txt  exceptions.cpp  model.cpp
src/core/vectors/: sorting.cpp
src/decision_tree/: CMakeLists.txt  decision_tree_node.cpp  find_thresholds.cpp
src/examples/: CMakeLists.txt  main.cpp  main_tree.cpp  main_tree_regressor.cpp
src/logging/: CMakeLists.txt  init_logging.cpp  logger.cpp
test/: CMakeLists.txt
test/test_core/: CMakeLists.txt  test_vectors.cpp
test/test_tree/: CMakeLists.txt  test_distributions.cpp  test_splits.cpp  test_tree.cpp  tree_test.cpp
